objects/FINS_Distributed_Marketing_Content__c.object
<CustomObject>
    <description>Used by the Mock Distributed Marketing Component to simulate distributed marketing data.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributed_Marketing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributed Marketing Template</label>
        <referenceTo>FINS_Distributed_Marketing_Template__c</referenceTo>
        <relationshipLabel>Distributed Marketing Content</relationshipLabel>
        <relationshipName>Distributed_Marketing_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image Left</fullName>
                </value>
                <value>
                    <fullName>Image Right</fullName>
                </value>
                <value>
                    <fullName>Image Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distributed Marketing Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Distributed Marketing Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributed Marketing Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>